syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = "./proto";

service User {
    rpc GetUserList(PageInfo) returns (UserListResonse); //用户列表
    rpc GetUserByMobile(MobileRequest) returns (UserInfoResponse); //通过mobile查询用户
    rpc GetUserById(IdRequest) returns (UserInfoResponse); //通过id查询用户
    rpc CreateUser(CreateUserInfo) returns (UserInfoResponse); //添加用户
    rpc UpdateUser(UpdateUserInfo) returns (google.protobuf.Empty); // 更新用户
    rpc CheckPassWord (PasswordCheckInfo) returns (CheckResponse); //检查密码
}

message PasswordCheckInfo {
    string password = 1;
    string encrypted_password = 2;
}

message CheckResponse {
    bool success = 1;
}

message PageInfo {
    uint32 pn = 1;
    uint32 p_size = 2;
}

message MobileRequest {
    string mobile = 1;
}

message IdRequest {
    int32 id = 1;
}

message CreateUserInfo {
    string nickname = 1;
    string password = 2;
    string mobile = 3;
}

message UpdateUserInfo {
    int32 id = 1;
    string nickname = 2;
    string gender = 3;
    uint64 birthday = 4;
}


message UserInfoResponse {
    int32 id = 1;
    string password = 2;
    string mobile = 3;
    string nickname = 4;
    uint64 birthday = 5;
    string gender = 6;
    int32 role = 7;
}

message UserListResonse {
    int32 total = 1;
    repeated UserInfoResponse data = 2;
}